# ChangeLog for app-misc/qbrew
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -qbrew-0.3.9.ebuild:
  Remove old

  17 Jun 2008; Chad A Simmons (CCIEChad) <chad.simmons@member.fsf.org>
  +qbrew-0.4.1.ebuild:
  Revision bump for bug 33679 thanks to gentoofan23 for the review

  04 Dec 2007; Jakub Moc <jakub@gentoo.org> qbrew-0.3.9.ebuild:
  Switch to EAPI-1 and slotted deps

  04 Aug 2007; Jakub Moc <jakub@gentoo.org> qbrew-0.3.9.ebuild:
  Use eqmake4 from qt4 eclass

  01 Jul 2007; Jakub Moc <jakub@gentoo.org> qbrew-0.3.9.ebuild:
  Use full path to qmake

  16 Aug 2006; Jakub Moc <jakub@gentoo.org> qbrew-0.3.9.ebuild:
  Fix for changed qt4.eclass: qt_min_version -> qt4_min_version

  17 Jul 2006; Tiziano Müller <gentoo@dev-zero.ch> +qbrew-0.3.9.ebuild:
  New/updated ebuild for bug #33679
