@@ -1,4 +1,4 @@
 DIST qbrew-0.4.1.tar.gz 291237 RMD160 47a87ae2600e16290526d0eaddf401e8edade285 SHA1 44c82fee8ec93f8c274c87b1b673cd0c44503dea SHA256 045747a8d3454caad416d2f1a26b8cce3c9c9984c62b928fa7366b3090576995
-EBUILD qbrew-0.4.1.ebuild 929 RMD160 7a20702b5bae1013bb0032eda90da6e2cfb2676a SHA1 3be20d932294dc755744ce9a8418346244f5bdb2 SHA256 7ef5aada996004a3e1957b005f516371936302a97b209ddc47f7666e397869ef
-MISC ChangeLog 893 RMD160 b2ff3323a82a9b1f27196a37b81a9fe55c2ca9cf SHA1 1a037d8d1778286892cef4175263ee1433ad0f49 SHA256 529d6b1a0504699000ab458ff6c4ab978ea6c2861bdc709ee06acc6ef6c09899
+EBUILD qbrew-0.4.1.ebuild 983 RMD160 34a3303c64c5ceadc8b4e327f9e51cd64b203fc4 SHA1 3741834633decea0502c3f89b48376f78a17232c SHA256 4a269946cf6ce29095ec2e891874a05aaa551fbad3126acdc520a473a2a45515
+MISC ChangeLog 1103 RMD160 4eb147273b229cd53f20a26024136a46321ca92a SHA1 4f1d1178072250be4ec93f63e394eafd6cd6aa18 SHA256 3f57228cf1672e7fb43ad0bb44ee2b62260e1747488640f0671d16e3265c7474
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
