@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Jul 2008; Chad A Simmons (CCIEChad) <chad.simmons@member.fsf.org>
+  qbrew-0.4.1.ebuild:
+  Remove depreciated qt4 eclass functions and fix for qt split ebuilds. Thanks
+  to gentoofan23 for review and help
+
   17 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -qbrew-0.3.9.ebuild:
   Remove old
 
